# Klar-Stack

./: .gitignore
.github/workflows/: backend.yml  frontend.yml
Klar/: .dockerignore  Cargo.toml  Dockerfile  test.fish
Klar/.sqlx/: query-0c43b4642e7126066085402bdde07f9d3cce178588f7bc1e5c34e67c86fe7beb.json  query-117806c8795147a7a13e7aff0e40066e9b3e4b240632c5bb72f1e0a799901848.json  query-21dcd3d7dbc7bdef7fcddd897ff99b2e51d1e358982adb0ee129187945ed38f6.json  query-33d998320e64d4975e088a29f673b7321540296bc6d5195f9d05fe671a50dc30.json  query-356002ad8410c27235d81daf463ff58f5fd753dd317d9addc6db638bd7224219.json  query-3c62f3ee1bb53ebcda819032554c3126dab219018da0016df8396a16823b8964.json  query-4504237a258fa14cdef4a92959a8b4a8eace47aa0bb5b52e9ef954b5d62b44f9.json  query-97802d43d3f7ae39b0626adb2cac1eb24a64db3b7e3aa8a3d536afca26478ea0.json  query-a83fe04f2166238c3bcf8721bd57fbda14ca46b17523d143ade125a3b1894e70.json  query-b239509c8dee7b13c7efbd5f5413e03c821fc1dd8579ea3b0cbea1541da39e24.json  query-ce52170f771e39dc195ca52775f1b127748c0ce31d1ecedd4c7d4d1f2821635a.json  query-df0a808a49fa9445ab63a46e53318c0ebfb2bbdd4baddb7ff82f295bdad48b23.json  query-f536a16938b5a073c2774166f9cc8910a70e9537ae2c1b87df44415a09e67d1a.json
Klar/docs/: clickhouse-notes.md
Klar/migrations/: 20260425000000_create_users.sql  20260425010000_add_password_hash.sql  20260425020000_create_posts.sql  20260425020100_create_follows.sql  20260425030000_create_likes.sql  20260425030100_create_comments.sql  20260425040000_add_edited_at.sql  20260425050000_create_media_assets.sql  20260425060000_add_profile_fields.sql  20260425070000_add_email_verification.sql  20260425080000_create_refresh_tokens.sql  20260502000000_create_blocks.sql  20260503000000_create_comment_likes.sql  20260529000000_create_notifications.sql  20260604000000_add_username_changed_at.sql  20260615000000_add_chat_tables.sql  20260615001000_upgrade_chats.sql  20260616140136_add_missing_index_to_posts.sql  20260717000100_add_keyset_pagination_index.sql  20260720000000_uuidv7_function.sql  20260720000100_users.sql  20260720000200_posts.sql  20260720000300_follows_blocks.sql  20260720000400_media_assets.sql  20260720000500_comments.sql  20260720000600_likes_partitioned.sql  20260720000700_auth_tokens.sql  20260720000800_notifications_partitioned.sql  20260720000900_feed_items.sql  20260720001000_post_events_partitioned.sql  20260720001100_chats.sql  20260723000000_private_accounts.sql  20260723000100_follow_request_notification_types.sql  20260723010000_reports_and_moderation.sql  20260723020000_add_report_review_note.sql
Klar/src/: auth.rs  config.rs  db.rs  email.rs  errors.rs  main.rs  media.rs  rate_limit.rs  routes.rs  storage.rs
Klar/src/handlers/: auth.rs  blocks.rs  chats.rs  comment_likes.rs  comments.rs  events.rs  feed.rs  follows.rs  health.rs  likes.rs  mod.rs  notifications.rs  posts.rs  reports.rs  uploads.rs  users.rs
Klar/src/models/: chat.rs  comment.rs  event.rs  like.rs  media.rs  mod.rs  post.rs  report.rs  user.rs
klar-web/: .dockerignore  Dockerfile  env.ts  next.config.ts  package-lock.json  package.json
klar-web/src/: middleware.ts  proxy.ts
klar-web/src/app/: globals.css  layout.tsx  page.tsx
klar-web/src/app/admin/reports/: page.tsx
klar-web/src/app/api/site-access/: route.ts
klar-web/src/app/chats/: page.tsx
klar-web/src/app/datenschutz/: page.tsx
klar-web/src/app/feed/: page.tsx
klar-web/src/app/feed/discovery/: page.tsx
klar-web/src/app/follow-requests/: page.tsx
klar-web/src/app/forgot-password/: page.tsx
klar-web/src/app/impressum/: page.tsx
klar-web/src/app/login/: page.tsx
klar-web/src/app/nutzungsbedingungen/: page.tsx
klar-web/src/app/posts/[id]/: page.tsx
klar-web/src/app/register/: page.tsx
klar-web/src/app/resend-verification/: page.tsx
klar-web/src/app/reset-password/: page.tsx
klar-web/src/app/search/: page.tsx
klar-web/src/app/settings/: page.tsx
klar-web/src/app/settings/account/: page.tsx
klar-web/src/app/settings/password/: page.tsx
klar-web/src/app/settings/profile/: page.tsx
klar-web/src/app/transparenz/: page.tsx
klar-web/src/app/users/[username]/: page.tsx
klar-web/src/app/verify-email/: page.tsx
klar-web/src/app/welcome/: page.tsx
klar-web/src/components/: ChatWindow.tsx  CreatePostModal.tsx  EditedBadge.tsx  Footer.tsx  NewChatModal.tsx  PostCard.tsx  PostModal.tsx  ReportModal.tsx  SmartBackButton.tsx  TopNav.tsx  UserListModal.tsx
klar-web/src/hooks/: use-notifications.ts  use-smart-back.ts
klar-web/src/lib/: api.ts  auth-context.tsx
klar-web/src/lib/utils/: media.ts
