[package]
name = "Klar"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart"] }
# Async runtime
tokio = { version = "1", features = ["full"] }
# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono", "migrate", "migrate"
] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
# UUIDs for user IDs etc
uuid = { version = "1", features = ["v4", "serde"] }
# Timestamps
chrono = { version = "0.4", features = ["serde"] }
# Tower middleware (cors, timeouts etc)
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
# Password hashing — argon2 is the current best choice, resistant to GPU attacks
argon2 = "0.5"
# JWT tokens for stateless auth
jsonwebtoken = "10"
# Need this for axum header extraction
axum-extra = { version = "0.10", features = ["typed-header"] }
# Image processing — resize, format conversion, EXIF stripping (by re-encoding)
image = "0.25"
# Secure random token generation for email verification & password reset
rand = "0.9"
# Hex encoding for tokens
hex = "0.4"
# SHA-256 for refresh token hashing (fast lookup, not password-level security needed)
sha2 = "0.10"
# Email sending (SMTP) — used for local/MailHog dev only now; production uses Resend
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder", "smtp-transport"] }
# Resend — HTTPS-based transactional email API. Bunny Magic Containers blocks
# outbound SMTP ports (25/465/587/2525) by default, so raw SMTP relays (like
# IONOS) time out in production; Resend's API runs over plain HTTPS (443).
resend-rs = "0.24"
# Rate limiting
governor = { version = "0.8", features = ["dashmap"] }
futures = "0.3.32"
tokio-stream = "0.1.18"
async-stream = "0.3.6"
aws-config = "=1.4.0"
aws-sdk-s3 = "=1.112.0"
aws-smithy-types = "=1.4.0"
reqwest = "0.13.4"
dotenvy = "0.15.7"
